--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <main class="main">
-        <div class="container"></div>
-      </main>
+      <main class="main"></main>
       <footer class="footer"></footer>
     </div>
 
