--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div class="wrapper">
-      <main class="main"></main>
+      <main class="main">
+        <h1>Hello SCSS</h1>
+      </main>
       <footer class="footer"></footer>
     </div>
 
