--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>SASS Tutorial template</title>
   </head>
   <body class="page">
-    <h1 class="page-title">Badges</h1>
+    <button class="small-btn" type="button">Click Me 😀</button>
+    <!-- <h1 class="page-title">Badges</h1>
     <div class="page-wrapper">
       <span class="badge badge-completed">Completed</span>
       <span class="badge badge-ended">Ended</span>
       <span class="badge badge-active">Active</span>
-    </div>
+    </div> -->
     <script type="module" src="./src/js/main.js"></script>
   </body>
 </html>
